<resources>
    <string name="app_name">MonPullMoche Shop</string>
    <string name="add_pullover_basket">Pullover n°%d added to basket</string>
    <string name="add_hat_basket">Hat n°%d added to basket</string>
    <string name="add_cap_basket">Cap n°%d added to basket</string>
    <string name="add_article_basket">Article n°%d added to basket</string>
    <string name="basket_total">Basket\'s total: %.2f €</string>
    <string name="price_text_view">%.2f €</string>
    <string name="clear_basket">You cleared your basket.</string>
    <string name="cancel_clear_basket">You didn\'t clear your basket.</string>
    <string name="confirm_phrase">Warning, you\'ll cancel every purchases on this page. Are you sure ?</string>
    <string name="confirm_title">Confirmation</string>
    <string name="fill_all_fields">You must fill all fields.</string>
    <string name="confirm_yes">YES</string>
    <string name="confirm_no">NO</string>
    <string name="footer">Made in 2021</string>
    <string name="description_example">A rather nice description example.</string>
    <string name="title_example">A rather nice title example.</string>
    <string name="price_example">Price.</string>
    <string name="prev_symbol">&lt;</string>
    <string name="next_symbol">&gt;</string>
    <string name="error_db">An error has occurred.</string>
    <string name="basket_total_without_price">Basket\'s total: </string>
    <string name="sell_mode">Sell</string>
    <string name="catalog_mode">Catalog</string>
    <string name="made_in_2021">Made in 2021</string>
    <string name="create_new_pull">Create a new pull</string>
    <string name="title">Title</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="order_well_registered">Your order has been registered.</string>
    <string name="delete_article_from_basket">Delete article from basket ?</string>
    <string name="no_products">No products.</string>
    <string name="favorite_mode">Favorites</string>
    <string name="my_basket">My basket</string>
    <string name="title_activity_find_us">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">My basket</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_shop">Boutique</string>
    <string name="menu_map">Map</string>

    <string name="menu_legal_mention">Legal mention</string>

    <string name="explante_legal_mention">
        In accordance with the provisions of Law No. 2004-575 of
        June 21, 2004 for confidence in the digital economy, readers
        of the Shop Clothes application are informed of the identity
        of the various stakeholders in the context of its implementation
        and monitoring
    </string>

    <string name="title_editing_the_application_legal_mention">Editing the application</string>
    <string name="content_editing_the_application_legal_mention">
        The Shop Clothes application is published by LegalPlace,
        a simplified joint stock company with capital of 10,051.50 euros, whose registered
        office is located at 47 rue Marcel Dassault, 57000 Metz, registered in the trade
        and companies register under number d unique identification 814 428 785 RCS Metz.
    </string>

    <string name="title_responsible_for_publication_legal_mention">Responsible for publication</string>
    <string name="content_responsible_for_publication_legal_mention">Erwin MOREL / Margot DUMOULIN / Kamil ??? </string>

    <string name="title_host_legal_mention">Host</string>
    <string name="content_host_legal_mention">
        The Shop Clothes app is hosted by Amazon Web Services LLC Address: P.O. Box 81226,
        Seattle, WA 98108-1226 The storage of Users personal data is carried out exclusively
        on data centers ("clusters") located in Member States of the European Union of the company
        Amazon Web Services LLC
    </string>

    <string name="title_contact_us_legal_mention">Contact us</string>
    <string name="content_contact_us_legal_mention">By email: support@shop-clothes.fr</string>

    <string name="title_CNIL_legal_mention">CNIL</string>
    <string name="content_CNIL_legal_mention">
        LegalPlace will keep in its computer systems and under reasonable security conditions proof of the
        transaction including the order form and invoice. LegalPlace has been declared to the CNIL
        under number 1986932. In accordance with the provisions of Law 78-17 of 6 January 1978 as
        amended, the User has the right to access, modify and deletion of information collected by
        LegalPlace. To exercise this right, it will be up to the User to send a message to the following
        address: support@shop-clothes.fr
    </string>

    <string name="title_disputes_legal_mention">Disputes</string>
    <string name="content_disputes_legal_mention">
        Any dispute relating to the application or to this legal notice will be brought before the Metz court
        will be governed and analyzed in accordance with French law on the merits, regardless of the conflict
        of laws rules. Use of the Shop Clothes application signifies your express agreement to the application
        of this jurisdictional clause. In the event that any of the provisions of this legal notice would be
        deemed illegal, void or inapplicable for any reason whatsoever, it would be considered not to be part
        of this legal notice and would not affect the validity or application. other provisions.
    </string>

    <string name="title_intellectual_property_legal_mention">Intellectual property</string>
    <string name="content_intellectual_property_legal_mention">The content (in particular data, soundtracks, information, illustrations, logos, brands, etc.)
        that appear or are available on the Shop Clothes application are protected by copyright and other intellectual
        property rights. and are the exclusive property of their respective publishers. Any copy, reproduction, representation,
        adaptation, alteration, modification, distribution, in whole or in part, of the content of the application in general,
        whether it belongs to it or to a third party, by any means whatsoever, is illegal except of a single copy, on a single
        computer and reserved for the exclusive private use of the copyist. The elements presented in the application are subject
        to change without notice and are made available without any guarantee of any kind, express or implied, may not give rise to
        any right to compensation. The information and images contained in the application are protected by copyright © CAPTAIN LEGAL
        or copyright of its partners.
    </string>

    <string name="title_services_provided_property_legal_mention">Services provided</string>
    <string name="content_services_provided_property_legal_mention">We offer the purchase of clothing in an online store</string>
</resources>