<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.td1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.td1.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_boutique"
        android:name="com.example.td1.ui.boutique.BoutiqueFragment"
        android:label="Boutique"
        tools:layout="@layout/fragment_boutique">
    </fragment>

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.td1.ui.findUs.FindUsFragment"
        android:label="Map"
        tools:layout="@layout/fragment_find_us" />

    <fragment
        android:id="@+id/menu_gestion_panier"
        android:name="com.example.td1.ui.monPanier.MonPanierFragment"
        android:label="@string/my_basket"
        tools:layout="@layout/fragment_mon_panier" />
    <fragment
        android:id="@+id/nav_mention_legales"
        android:name="com.example.td1.ui.mentionLegales.MentionLegalesFragment"
        android:label="@string/menu_legal_mention"
        tools:layout="@layout/fragment_mention_legales" />

</navigation>