<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/productTitleIlpTextView"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAlignment="center"
        android:textSize="@dimen/basket_text_size"
        app:layout_constraintRight_toLeftOf="@+id/productQuantityIlpTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productQuantityIlpTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAlignment="center"
        android:textSize="@dimen/basket_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/productSizeIlpTextView"
        app:layout_constraintStart_toEndOf="@+id/productTitleIlpTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productPriceIlpTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textAlignment="center"
        android:textSize="@dimen/basket_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/productSizeIlpTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productSizeIlpTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textAlignment="center"
        android:textSize="@dimen/basket_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/productPriceIlpTextView"
        app:layout_constraintStart_toEndOf="@+id/productQuantityIlpTextView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>