<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/productTitleIlpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productQuantityIlpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/productPriceIlpTextView"
        app:layout_constraintStart_toEndOf="@+id/productTitleIlpTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productPriceIlpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/filledHeartImageButton"
        app:layout_constraintStart_toEndOf="@+id/productQuantityIlpTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/filledHeartImageButton"
        style="@style/img_button_heart_style"
        android:layout_width="@dimen/img_button_width"
        android:layout_height="@dimen/img_button_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tfilledHeartImageButton"
        app:layout_constraintStart_toEndOf="@+id/productPriceIlpTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_favorite_black_18dp" />

    <ImageButton
        android:id="@+id/tfilledHeartImageButton"
        style="@style/img_button_heart_style"
        android:layout_width="@dimen/img_button_width"
        android:layout_height="@dimen/img_button_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/filledHeartImageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_favorite_black_18dp" />


</androidx.constraintlayout.widget.ConstraintLayout>