<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CatalogueFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/title_example"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceTextView" />

    <Button
        android:id="@+id/prevButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/prev_symbol"
        android:theme="@style/button_style"
        app:layout_constraintBottom_toBottomOf="@id/productImageView"
        app:layout_constraintRight_toLeftOf="@id/productImageView"
        app:layout_constraintTop_toTopOf="@id/productImageView" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/next_symbol"
        android:theme="@style/button_style"
        app:layout_constraintBottom_toBottomOf="@id/productImageView"
        app:layout_constraintLeft_toRightOf="@id/productImageView"
        app:layout_constraintTop_toTopOf="@id/productImageView" />

    <ImageView
        android:id="@+id/productImageView"
        android:layout_width="@dimen/img_view_width"
        android:layout_height="@dimen/img_view_height"
        android:layout_margin="40dp"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />


    <Spinner
        android:id="@+id/sizeSpinner"
        android:layout_width="@dimen/spinner_width"
        android:layout_height="@dimen/spinner_height"
        android:layout_margin="@dimen/spinner_margin"
        android:entries="@array/taille"
        android:theme="@style/spinner_style"
        app:layout_constraintBottom_toTopOf="@+id/colorSpinner"
        app:layout_constraintLeft_toRightOf="@+id/descriptionTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <Spinner
        android:id="@+id/colorSpinner"
        android:layout_width="@dimen/spinner_width"
        android:layout_height="@dimen/spinner_height"
        android:layout_margin="@dimen/spinner_margin"
        android:entries="@array/coloris"
        android:theme="@style/spinner_style"
        app:layout_constraintLeft_toRightOf="@+id/descriptionTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeSpinner" />

    <ImageButton
        android:id="@+id/cartImageButton"
        android:layout_width="@dimen/img_button_width"
        android:layout_height="@dimen/img_button_height"
        android:layout_marginRight="@dimen/img_button_margin_side"
        android:layout_marginBottom="@dimen/img_button_margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_shopping_cart_24" />
    <!--          android:onClick="onClickBtnBasket"-->

    <ImageButton
        android:id="@+id/cancelImageButton"
        android:layout_width="@dimen/img_button_width"
        android:layout_height="@dimen/img_button_height"
        android:layout_marginLeft="@dimen/img_button_margin_side"
        android:layout_marginBottom="@dimen/img_button_margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/baseline_undo_white_18dp" />
    <!-- android:onClick="onClickCancel"-->

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="133sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/cadre"
        android:maxLines="11"
        android:padding="7dp"
        android:text="@string/description_example"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/footerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_500"
        android:paddingLeft="20dp"
        android:text="@string/footer"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/price_example"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productImageView" />

    <View
        android:id="@+id/blankView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:elevation="3dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/expandedImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="4dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

</androidx.constraintlayout.widget.ConstraintLayout>

