<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/global_app_margin">

    <TextView
        android:id="@+id/lastOrderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dernière commande passée"
        android:textSize="@dimen/legal_notices_title_size"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Commande n°"
        android:id="@+id/orderNumberTextView"
        android:textSize="@dimen/legal_notices_title_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastOrderTextView" />

    <TextView
        android:id="@+id/orderDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Faite le"
        android:textSize="@dimen/global_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderNumberTextView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_app_margin"
        app:layout_constraintTop_toBottomOf="@+id/orderDateTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orderColumnsLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/productTitleIlpTextView"
                android:layout_width="@dimen/basket_column_description"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAlignment="textStart"
                android:textSize="@dimen/basket_text_size"
                app:layout_constraintRight_toLeftOf="@+id/productQuantityIlpTextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/productQuantityIlpTextView"
                android:layout_width="@dimen/basket_column_quantity"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textAlignment="textStart"
                android:textSize="@dimen/basket_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/productSizeIlpTextView"
                app:layout_constraintStart_toEndOf="@+id/productTitleIlpTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/productPriceIlpTextView"
                android:layout_width="@dimen/basket_column_size_price_action"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textAlignment="textStart"
                android:textSize="@dimen/basket_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/productSizeIlpTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/productSizeIlpTextView"
                android:layout_width="@dimen/basket_column_size_price_action"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textAlignment="textStart"
                android:textSize="@dimen/basket_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/productPriceIlpTextView"
                app:layout_constraintStart_toEndOf="@+id/productQuantityIlpTextView"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ListView
            android:id="@+id/orderListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/orderColumnsLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total de la commande:"
            android:layout_marginTop="@dimen/global_app_margin"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/orderListView"
            app:layout_constraintLeft_toLeftOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>